--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="sweetalert2.all.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Educational-Toy</title>
